--- a/practice/hello_world.tex
+++ b/practice/hello_world.tex
@@ -45,4 +45,12 @@
     1 + 2 &= 3 \\
     1 &= 3 - 2
   \end{align*}
+
+  \section{Fractions and more}
+
+  \begin{align*}
+    f(x) &= x^2 \\
+    g(x) &= \frac{1}{x}\\
+    F(x) &= \int^a_b \frac{1}{3}x^3
+  \end{align*}
 \end{document}
