--- a/practice/hello_world.tex
+++ b/practice/hello_world.tex
@@ -53,4 +53,20 @@
     g(x) &= \frac{1}{x}\\
     F(x) &= \int^a_b \frac{1}{3}x^3
   \end{align*}
+  \section{Matrices}
+
+  Here is an example of building a matrix.
+  \begin{equation}
+    \left[
+  \begin{matrix}
+    1 & 0\\
+    0 & 1
+  \end{matrix}
+    \right]
+\end{equation}
+\section{Brackets and Parenthesis}
+Both brackets and parethesis can be scaled in math mode like this:
+\begin{equation}
+  \left(\frac{1}{\sqrt{x}}\right)
+\end{equation}
 \end{document}
