--- a/Jim_Hessin.tex
+++ b/Jim_Hessin.tex
@@ -55,60 +55,70 @@
     \textbf{#1} & #2 \\
     \textit{#3} & \textit{#4} \\
 \end{tabular*}\vspace{-6pt}}
-      %-----------------------------------------------------------
+%-----------------------------------------------------------
 
 
 \begin{document}
 
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large Your Name} & \textbf{\today} \\
-  Short description of you & E-mail \\
-  Adress & Homepage \\
+  \textbf{\Large Jim Hessin} & \textbf{\today} \\
+  Multi-language Programmer & jhessin@gmail.com\\
+  Mullen, NE 69152 & grillbrickstudios.com\\
 \end{tabular*}
 \\
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resheading{Technical Skills}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{itemize}
+
+  \item \ressubheading{Preferred Languages}{Ruby, Rust, LaTeX}{Known Languages}{C++, C\#, Java, Javascript, Swift, Python}
+
+  \item \ressubheading{Methodologies}{}{OOP/D, UML, Inheritance, Encapsulation,
+    Data Abstraction, Polymorphism, Data Oriented Programming}{}
+
+  \item \ressubheading{OS (Preferred)}{OS (Known)}{Linux (Debian/Arch), Mac OS X}{Windows (XP, 7, 8.1, 10), Android, iOS}
+
+  \item \ressubheading{Database}{}{SQLite, Access, Firebase}{}
+
+  \item \ressubheading{Tools (Preferred)}{Tools (Known)}{neovim, Unity, Unreal
+    Engine 4}{Visual Studio, Eclipse, Android Studio, Xcode}
+
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \resheading{Education}
-                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 
-  \item \ressubheading{University Name}{City, Country}{BSc, MSc, PhD, or something else}{2009 - 2013}
-
-    \begin{itemize}
-        \resitem{Additional description nr 1}
-        \resitem{Additional description nr 2}
-    \end{itemize}
-
-  \item \ressubheading{Other University Name}{City, Country}{BSc, MSc, PhD, or something else}{2004 - 2009}
+  \item \ressubheading{National American University, Westwood College}{Online}{BS, Game Software Development}{2016}
 
 \end{itemize}
 
-
-                            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\resheading{Some important section}
-                            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{enumerate}
-  \item First item
-  \item Second item
-\end{enumerate}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resheading{Awards}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{itemize}
-  \item First item
-  \item Second item
+
+  \item Multiple Dean's List Awards for outstanding academic performance
+  \item 3.9 GPA
+
 \end{itemize}
 
-                                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\resheading{Awards, Grants \& Honours}
-                                        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-2pt}
-\begin{center}\begin{tabular*}{6.6in}{l@{\extracolsep{\fill}}r}
-    \multicolumn{2}{c}{Nobel Prize \cftdotfill{\cftdotsep} 2013}\\
-    \multicolumn{2}{c}{Big grant \cftdotfill{\cftdotsep} 2010-2013}\\
-    \vphantom{E}
-  \end{tabular*}
-\end{center}\vspace*{-16pt}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\resheading{Employment History}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% \begin{enumerate}
+%   \item First item
+%   \item Second item
+% \end{enumerate}
+
+\begin{itemize}
+  \item \ressubheading{Most recent Job}{Mullen, NE}{Location}{2015 - Present}
+  \item Second item
+\end{itemize}
 
 \end{document}
